<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/nav_daily_meal"
            android:title="@string/menu_daily_meal"
            android:icon="@drawable/inclusive"
            />
        <item
            android:id="@+id/nav_favourite"
            android:title="@string/menu_favourite"
            android:icon="@drawable/favorite"
            />
        <item
            android:id="@+id/nav_my_cart"
            android:title="@string/menu_my_cart"
            android:icon="@drawable/shopping_cart"
            />
    </group>
</menu>